--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 <!doctype html>
 <html>
-<body>
-<h1>Quote Machine app</h1>
-<p>Will live here</p>
-</body>
+	<head>
+		<meta charset="utf-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<title>Random Quote Generator</title>
+
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Special+Elite|Fredericka+the+Great'>
+		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+		<link rel="stylesheet" href="style.css">
+
+		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	    <!--[if lt IE 9]>
+	      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	    <![endif]-->
+	</head>
+	
+	<body>
+		<div class="container-fluid">
+		  <div class="row">
+		    <div class="col-xs-8 col-xs-offset-2 text-center">
+		      <h1>Be Inspired</h1>
+		      <div class="quote-area"></div>
+		      <button class="btn btn-lg btn-default"><i class="glyphicon glyphicon-repeat"></i> New Quote</button>
+		    </div>
+		  </div>
+		</div>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script src="script.js"></script>
+	</body>
 </html>
